--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,38 @@
-.nav {
-  display: flex;
-  margin: 20px;
+$blue: #1F69E5;
+$red: #FF7352;
+$dark: #202E3D;
+$grey: #C1C1C1;
 
-  * {
-    margin-right: 10px;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Helvetica;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+body {
+  padding: 20px;
+}
+
+@import './components/Wave/Wave.scss';
+@import './components/Input/Input.scss';
+@import './components/Button/Button.scss';
+@import './components/Textarea/Textarea.scss';
+@import './components/Select/Select.scss';
+
+@keyframes move_wave {
+  0% {
+    transform: translateX(0) translateZ(0) scaleY(1)
+  }
+  50% {
+    transform: translateX(-25%) translateZ(0) scaleY(0.55)
+  }
+  100% {
+    transform: translateX(-50%) translateZ(0) scaleY(1)
   }
 }
